--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,6 +41,7 @@ body {
 @media screen and (max-width:600px) {
   body {
     width:100%;
+    height: 100%;
     background: white;
     box-shadow: none;
   }
